--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -6,6 +6,9 @@
   border-radius: 50px;
   margin-top: 10%;
   box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.274);
+  @media only screen and (max-width: $bp-medium) {
+    margin-top: 5%;
+  }
 
   &:focus {
     outline: none;
