--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -13,13 +13,24 @@
   border-radius: 10px;
   padding: 1.5rem;
   box-shadow: 0.5rem 0.5rem 3rem rgba(0, 0, 0, 0.274);
+
+  @media only screen and (max-width: $bp-largest) {
+    width: 90vw;
+    height: min-content;
+  }
   &-heading {
     text-align: center;
     font-size: 4rem;
     margin-bottom: 3rem;
+    @media only screen and (max-width: $bp-medium) {
+      font-size: 3rem;
+    }
   }
   &-paragraph {
     font-size: 2rem;
+    @media only screen and (max-width: $bp-medium) {
+      font-size: 1.8rem;
+    }
   }
   &-1 {
     z-index: 10;
