--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -5,6 +5,12 @@
   justify-self: center;
   margin-bottom: 5%;
   margin-top: 5%;
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 4rem;
+  }
+  @media only screen and (max-width: $bp-small) {
+    font-size: 3rem;
+  }
 }
 
 .photo {
@@ -13,4 +19,10 @@
   justify-self: center;
   border-radius: 50%;
   width: 20%;
+  @media only screen and (max-width: $bp-medium) {
+    width: 30%;
+  }
+  @media only screen and (max-width: $bp-small) {
+    width: 40%;
+  }
 }
